--- a/themes/landing-page-hugo/layouts/partials/head.html
+++ b/themes/landing-page-hugo/layouts/partials/head.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <base href="{{ .Site.BaseURL }}">
-    <title>{{ .Title }}</title>
+    <title>{{ .Title }}ほげほげほげ</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
